add a lot of stuff

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-GEMINI_API_KEY=AIzaSyD18Ge_xBz7dyvvOpE2yju2XJk60hgK9ww
-GCP_PROJECT_ID=inner-melody-461103-f0
-# GCP_PROJECT_ID=978604541120-fmcim15k16vbatesna24ulke8m4buldp.apps.googleusercontent.com
-GOOGLE_APPLICATION_CREDENTIALS=inner-melody-461103-f0-066cce03aa73.json
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=admin
+DB_NAME=resumeai
+DB_SSLMODE=disable
