--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -75,35 +75,25 @@ jobs:
           # Stop existing containers
           docker-compose -f docker-compose.backend.yml down || true
           
-          # Build and start containers with environment variables directly
-          DB_HOST=${{ secrets.DB_HOST }} \
-          DB_PORT=${{ secrets.DB_PORT }} \
-          DB_USER=${{ secrets.DB_USER }} \
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-          DB_NAME=${{ secrets.DB_NAME }} \
-          JWT_SECRET=${{ secrets.JWT_SECRET }} \
-          GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }} \
-          GCP_PRIVATE_KEY_ID=${{ secrets.GCP_PRIVATE_KEY_ID }} \
-          GCP_PRIVATE_KEY='${{ secrets.GCP_PRIVATE_KEY }}' \
-          GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }} \
-          GCP_CLIENT_ID=${{ secrets.GCP_CLIENT_ID }} \
-          GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }} \
-          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
-          docker-compose -f docker-compose.backend.yml build --no-cache
+          # Create .env file for docker-compose
+          cat > .env << EOF
+          DB_HOST=${{ secrets.DB_HOST }}
+          DB_PORT=${{ secrets.DB_PORT }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          DB_NAME=${{ secrets.DB_NAME }}
+          JWT_SECRET=${{ secrets.JWT_SECRET }}
+          GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}
+          GCP_PRIVATE_KEY_ID=${{ secrets.GCP_PRIVATE_KEY_ID }}
+          GCP_PRIVATE_KEY='${{ secrets.GCP_PRIVATE_KEY }}'
+          GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }}
+          GCP_CLIENT_ID=${{ secrets.GCP_CLIENT_ID }}
+          GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }}
+          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+          EOF
           
-          DB_HOST=${{ secrets.DB_HOST }} \
-          DB_PORT=${{ secrets.DB_PORT }} \
-          DB_USER=${{ secrets.DB_USER }} \
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-          DB_NAME=${{ secrets.DB_NAME }} \
-          JWT_SECRET=${{ secrets.JWT_SECRET }} \
-          GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }} \
-          GCP_PRIVATE_KEY_ID=${{ secrets.GCP_PRIVATE_KEY_ID }} \
-          GCP_PRIVATE_KEY='${{ secrets.GCP_PRIVATE_KEY }}' \
-          GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }} \
-          GCP_CLIENT_ID=${{ secrets.GCP_CLIENT_ID }} \
-          GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }} \
-          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
+          # Build and start containers
+          docker-compose -f docker-compose.backend.yml build --no-cache
           docker-compose -f docker-compose.backend.yml up -d
           
           # Clean up
