--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -11,6 +11,7 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_NAME=${DB_NAME}
+      - DB_SSLMODE=${DB_SSLMODE:-disable}
       - JWT_SECRET=${JWT_SECRET}
       - GCP_PROJECT_ID=${GCP_PROJECT_ID}
       - GCP_PRIVATE_KEY_ID=${GCP_PRIVATE_KEY_ID}
