--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -79,26 +79,22 @@ jobs:
           # Create external network if it doesn't exist
           docker network create ai-resume-network 2>/dev/null || echo "Network already exists"
           
-          # Create .env file for docker-compose
-          cat > .env << EOF
-          DB_HOST=${{ secrets.DB_HOST }}
-          DB_PORT=${{ secrets.DB_PORT }}
-          DB_USER=${{ secrets.DB_USER }}
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-          DB_NAME=${{ secrets.DB_NAME }}
-          DB_SSLMODE=${{ secrets.DB_SSLMODE }}
-          JWT_SECRET=${{ secrets.JWT_SECRET }}
-          GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}
-          GCP_PRIVATE_KEY_ID=${{ secrets.GCP_PRIVATE_KEY_ID }}
-          GCP_PRIVATE_KEY='${{ secrets.GCP_PRIVATE_KEY }}'
-          GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }}
-          GCP_CLIENT_ID=${{ secrets.GCP_CLIENT_ID }}
-          GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }}
-          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
-          EOF
-          
-          # Build and start containers
+          # Build and start containers with environment variables
           docker-compose -f docker-compose.backend.yml build --no-cache
+          DB_HOST=${{ secrets.DB_HOST }} \
+          DB_PORT=${{ secrets.DB_PORT }} \
+          DB_USER=${{ secrets.DB_USER }} \
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+          DB_NAME=${{ secrets.DB_NAME }} \
+          DB_SSLMODE=${{ secrets.DB_SSLMODE }} \
+          JWT_SECRET=${{ secrets.JWT_SECRET }} \
+          GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }} \
+          GCP_PRIVATE_KEY_ID=${{ secrets.GCP_PRIVATE_KEY_ID }} \
+          GCP_PRIVATE_KEY='${{ secrets.GCP_PRIVATE_KEY }}' \
+          GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }} \
+          GCP_CLIENT_ID=${{ secrets.GCP_CLIENT_ID }} \
+          GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }} \
+          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
           docker-compose -f docker-compose.backend.yml up -d
           
           # Wait for container to be ready
