Remove X-API-Key header to simplify CORS and authentication logic

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -117,10 +117,10 @@ jobs:
           echo "🧪 Testing CORS headers..."
           sleep 5
           echo "Testing OPTIONS request:"
-          curl -v -X OPTIONS -H "Origin: https://www.hihired.org" -H "Access-Control-Request-Method: POST" -H "Access-Control-Request-Headers: X-API-Key" https://hihired.org/api/experience/optimize
+          curl -v -X OPTIONS -H "Origin: https://www.hihired.org" -H "Access-Control-Request-Method: POST" -H "Access-Control-Request-Headers: Content-Type" https://hihired.org/api/experience/optimize
           
           echo "Testing actual request:"
-          curl -v -X POST -H "Origin: https://www.hihired.org" -H "Content-Type: application/json" -H "X-API-Key: hihired-secure-api-2024" -d '{"jobDescription": "Software Engineer", "userExperience": "Developed web applications using React and Node.js"}' https://hihired.org/api/experience/optimize
+          curl -v -X POST -H "Origin: https://www.hihired.org" -H "Content-Type: application/json" -d '{"jobDescription": "Software Engineer", "userExperience": "Developed web applications using React and Node.js"}' https://hihired.org/api/experience/optimize
           
           # Clean up
           docker system prune -f 
