--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -81,20 +81,24 @@ jobs:
           
           # Build and start containers with environment variables
           docker-compose -f docker-compose.backend.yml build --no-cache
-          DB_HOST=${{ secrets.DB_HOST }} \
-          DB_PORT=${{ secrets.DB_PORT }} \
-          DB_USER=${{ secrets.DB_USER }} \
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-          DB_NAME=${{ secrets.DB_NAME }} \
-          DB_SSLMODE=${{ secrets.DB_SSLMODE }} \
-          JWT_SECRET=${{ secrets.JWT_SECRET }} \
-          GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }} \
-          GCP_PRIVATE_KEY_ID=${{ secrets.GCP_PRIVATE_KEY_ID }} \
-          GCP_PRIVATE_KEY='${{ secrets.GCP_PRIVATE_KEY }}' \
-          GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }} \
-          GCP_CLIENT_ID=${{ secrets.GCP_CLIENT_ID }} \
-          GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }} \
-          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
+          
+          # Export environment variables
+          export DB_HOST="${{ secrets.DB_HOST }}"
+          export DB_PORT="${{ secrets.DB_PORT }}"
+          export DB_USER="${{ secrets.DB_USER }}"
+          export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
+          export DB_NAME="${{ secrets.DB_NAME }}"
+          export DB_SSLMODE="${{ secrets.DB_SSLMODE }}"
+          export JWT_SECRET="${{ secrets.JWT_SECRET }}"
+          export GCP_PROJECT_ID="${{ secrets.GCP_PROJECT_ID }}"
+          export GCP_PRIVATE_KEY_ID="${{ secrets.GCP_PRIVATE_KEY_ID }}"
+          export GCP_PRIVATE_KEY="${{ secrets.GCP_PRIVATE_KEY }}"
+          export GCP_CLIENT_EMAIL="${{ secrets.GCP_CLIENT_EMAIL }}"
+          export GCP_CLIENT_ID="${{ secrets.GCP_CLIENT_ID }}"
+          export GCP_CLIENT_X509_CERT_URL="${{ secrets.GCP_CLIENT_X509_CERT_URL }}"
+          export GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}"
+          
+          # Start containers with environment variables
           docker-compose -f docker-compose.backend.yml up -d
           
           # Wait for container to be ready
