--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -22,39 +22,12 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
         
-    - name: Set up environment variables
-      run: |
-        echo "Setting up GCP environment variables..."
-        echo "GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}" >> $GITHUB_ENV
-        echo "GCP_PRIVATE_KEY_ID=${{ secrets.GCP_PRIVATE_KEY_ID }}" >> $GITHUB_ENV
-        echo "GCP_PRIVATE_KEY='${{ secrets.GCP_PRIVATE_KEY }}'" >> $GITHUB_ENV
-        echo "GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }}" >> $GITHUB_ENV
-        echo "GCP_CLIENT_ID=${{ secrets.GCP_CLIENT_ID }}" >> $GITHUB_ENV
-        echo "GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }}" >> $GITHUB_ENV
-        echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> $GITHUB_ENV
-        
     - name: Deploy Backend to EC2
       uses: appleboy/ssh-action@v0.1.5
-      env:
-        DB_HOST: ${{ secrets.DB_HOST }}
-        DB_PORT: ${{ secrets.DB_PORT }}
-        DB_USER: ${{ secrets.DB_USER }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        DB_NAME: ${{ secrets.DB_NAME }}
-        DB_SSLMODE: ${{ secrets.DB_SSLMODE }}
-        JWT_SECRET: ${{ secrets.JWT_SECRET }}
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-        GCP_PRIVATE_KEY_ID: ${{ secrets.GCP_PRIVATE_KEY_ID }}
-        GCP_PRIVATE_KEY: ${{ secrets.GCP_PRIVATE_KEY }}
-        GCP_CLIENT_EMAIL: ${{ secrets.GCP_CLIENT_EMAIL }}
-        GCP_CLIENT_ID: ${{ secrets.GCP_CLIENT_ID }}
-        GCP_CLIENT_X509_CERT_URL: ${{ secrets.GCP_CLIENT_X509_CERT_URL }}
-        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       with:
         host: ${{ secrets.BACKEND_EC2_HOST }}
         username: ec2-user
         key: ${{ secrets.BACKEND_EC2_SSH_KEY }}
-        envs: DB_HOST,DB_PORT,DB_USER,DB_PASSWORD,DB_NAME,DB_SSLMODE,JWT_SECRET,GCP_PROJECT_ID,GCP_PRIVATE_KEY_ID,GCP_PRIVATE_KEY,GCP_CLIENT_EMAIL,GCP_CLIENT_ID,GCP_CLIENT_X509_CERT_URL,GEMINI_API_KEY
         script: |
           # Update system and install essential packages
           sudo yum update -y
@@ -98,30 +71,7 @@ jobs:
           # Build and start containers with environment variables
           docker-compose -f docker-compose.backend.yml build --no-cache
           
-          # Debug: Check environment variables
-          echo "🔍 Checking environment variables..."
-          echo "DB_HOST: $DB_HOST"
-          echo "DB_PORT: $DB_PORT"
-          echo "DB_USER: $DB_USER"
-          echo "DB_NAME: $DB_NAME"
-          echo "DB_SSLMODE: $DB_SSLMODE"
-          echo "GCP_PROJECT_ID: $GCP_PROJECT_ID"
-          
-          # Start containers with environment variables passed directly
-          DB_HOST="$DB_HOST" \
-          DB_PORT="$DB_PORT" \
-          DB_USER="$DB_USER" \
-          DB_PASSWORD="$DB_PASSWORD" \
-          DB_NAME="$DB_NAME" \
-          DB_SSLMODE="$DB_SSLMODE" \
-          JWT_SECRET="$JWT_SECRET" \
-          GCP_PROJECT_ID="$GCP_PROJECT_ID" \
-          GCP_PRIVATE_KEY_ID="$GCP_PRIVATE_KEY_ID" \
-          GCP_PRIVATE_KEY="$GCP_PRIVATE_KEY" \
-          GCP_CLIENT_EMAIL="$GCP_CLIENT_EMAIL" \
-          GCP_CLIENT_ID="$GCP_CLIENT_ID" \
-          GCP_CLIENT_X509_CERT_URL="$GCP_CLIENT_X509_CERT_URL" \
-          GEMINI_API_KEY="$GEMINI_API_KEY" \
+          # Start containers
           docker-compose -f docker-compose.backend.yml up -d
           
           # Wait for container to be ready
