--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -75,7 +75,7 @@ jobs:
           # Stop existing containers
           docker-compose -f docker-compose.backend.yml down || true
           
-          # Create .env file for docker-compose
+          # Create .env file for docker-compose (restoring known working approach)
           cat > .env << EOF
           DB_HOST=${{ secrets.DB_HOST }}
           DB_PORT=${{ secrets.DB_PORT }}
@@ -92,7 +92,7 @@ jobs:
           GCP_CLIENT_X509_CERT_URL=${{ secrets.GCP_CLIENT_X509_CERT_URL }}
           GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
           EOF
-          
+
           # Build and start containers
           docker-compose -f docker-compose.backend.yml build --no-cache
           docker-compose -f docker-compose.backend.yml up -d
