--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -95,6 +95,8 @@ jobs:
 
           # Build and start containers
           docker-compose -f docker-compose.backend.yml build --no-cache
+          # Ensure external network exists
+          docker network create ai-resume-network || true
           docker-compose -f docker-compose.backend.yml up -d
           
           # Clean up
