--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -23,7 +23,7 @@ services:
       - NODE_ENV=production
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8081/api/auth/login"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "--method=OPTIONS", "http://localhost:8081/api/auth/login"]
       interval: 30s
       timeout: 10s
       retries: 3
