--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -47,6 +47,16 @@ jobs:
           sudo yum update -y
           sudo yum install -y git wget --allowerasing || sudo yum install -y git wget --skip-broken
           
+          # Install Go if not present
+          if ! command -v go &> /dev/null; then
+            echo "Installing Go..."
+            wget https://golang.org/dl/go1.22.0.linux-amd64.tar.gz -O /tmp/go.tar.gz
+            sudo rm -rf /usr/local/go && sudo tar -C /usr/local -xzf /tmp/go.tar.gz
+            rm /tmp/go.tar.gz
+          fi
+          export PATH=$PATH:/usr/local/go/bin
+          go version
+
           # Install Docker if not installed
           if ! command -v docker &> /dev/null; then
             sudo yum install -y docker
@@ -75,6 +85,9 @@ jobs:
             exit 1
           fi
           
+          # Create vendor directory to avoid OOM errors during build
+          go mod vendor
+
           # Create .env file for docker-compose (restoring known working approach)
           cat > .env << EOF
           DB_HOST=${{ secrets.DB_HOST }}
