update yml to clean up

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -71,6 +71,14 @@ jobs:
             sudo chmod +x /usr/local/bin/docker-compose
           fi
           
+          # Free up disk space
+          echo "Cleaning up disk space..."
+          df -h
+          sudo yum clean all
+          docker system prune -af || true
+          rm -rf /home/ec2-user/go
+          df -h
+
           # Remove existing directory completely and recreate
           rm -rf ~/ai-resume-backend
           mkdir -p ~/ai-resume-backend
