--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -4,10 +4,17 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
-
-jobs:
-  deploy-backend:
+    branches: [ m          # Clone the main branch of the repository using HTTPS (public repo)
+          git clone -b main https://github.com/flychicken123/resume_back.git .
+          
+          # Check if clone was successful
+          if [ ! -f "docker-compose.backend.yml" ]; then
+            echo "Failed to clone repository or docker-compose file missing"
+            exit 1
+          fi
+          
+          # Create .env file for docker-compose (restoring known working approach)
+          cat > .env << EOF deploy-backend:
     runs-on: ubuntu-latest
     environment: prod
     
