--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -134,41 +134,30 @@ jobs:
           AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}
           EOF
 
-          # ZERO-DOWNTIME DEPLOYMENT STRATEGY
-          echo "🚀 Starting zero-downtime deployment..."
+          # SIMPLE DEPLOYMENT STRATEGY
+          echo "🚀 Starting deployment..."
           
           # Ensure network exists
           docker network create ai-resume-network || true
           
-          # Build new image without stopping current service
+          # Build new image
           echo "🔨 Building new backend image..."
           docker-compose -f docker-compose.backend.yml build --no-cache backend
           
-          # Check if there's an existing service running
-          if docker-compose -f docker-compose.backend.yml ps backend | grep -q "Up"; then
-            echo "📊 Existing service detected, performing zero-downtime deployment..."
-            
-            # Scale up to 2 instances (new + old)
-            docker-compose -f docker-compose.backend.yml up -d --scale backend=2 --no-recreate
-            
-            # Wait for new instance to be healthy
-            echo "⏳ Waiting for new instance to be healthy..."
-            sleep 30
-            
-            # Check health of new instance
-            if curl -f http://localhost:8081/api/health > /dev/null 2>&1; then
-              echo "✅ New instance is healthy, scaling down to 1 instance"
-              docker-compose -f docker-compose.backend.yml up -d --scale backend=1 --no-recreate
-              echo "🎉 Zero-downtime deployment completed successfully!"
-            else
-              echo "❌ New instance failed health check, rolling back..."
-              docker-compose -f docker-compose.backend.yml up -d --scale backend=1 --no-recreate
-              echo "🔄 Rollback completed - service restored to previous version"
-              exit 1
-            fi
+          # Deploy with compose (this will replace the existing container)
+          echo "🚀 Deploying backend..."
+          docker-compose -f docker-compose.backend.yml up -d
+          
+          # Wait for service to be ready
+          echo "⏳ Waiting for service to be ready..."
+          sleep 30
+          
+          # Check health
+          echo "🏥 Checking service health..."
+          if curl -f http://localhost:8081/api/health > /dev/null 2>&1; then
+            echo "✅ Deployment successful - service is healthy!"
           else
-            echo "🆕 No existing service, performing fresh deployment..."
-            docker-compose -f docker-compose.backend.yml up -d
+            echo "⚠️ Service may still be starting up..."
           fi
           
           # Clean up
