--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -47,6 +47,7 @@ jobs:
       uses: golangci/golangci-lint-action@v4
       with:
         version: latest
+        args: --out-format=colored-line-number
 
   deploy-backend:
     runs-on: ubuntu-latest
