--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -48,6 +48,7 @@ jobs:
       with:
         version: latest
         args: --out-format=colored-line-number
+        skip-cache: true
 
   deploy-backend:
     runs-on: ubuntu-latest
